 
INCOMPATIBLE CHANGES

PIG-3996: Delete zebra from svn (cheolsoo)

PIG-3898: Refactor PPNL for non-MR execution engine (cheolsoo)

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-4006: Make the interval of DAGStatus report configurable (cheolsoo)

PIG-3999: Document PIG-3388 (lbendig via cheolsoo)

PIG-3954: Document use of user level jar cache (aniket486)

PIG-3752: Fix e2e Parallel test for Windows (daijy)

PIG-3966: Document variable input arguments of UDFs (lbendig via aniket486)

PIG-3963: Documentation for BagToString UDF (mrflip via daijy)

PIG-3929: pig.temp.dir should allow to substitute vars as hadoop configuration does (aniket486)

PIG-3913: Pig should use job's jobClient wherever possible (fixes local mode counters) (aniket486)

PIG-3941: Piggybank's Over UDF returns an output schema with named fields (mrflip via cheolsoo)

PIG-3545: Seperate validation rules from optimizer (daijy)

PIG-3745: Document auto local mode for pig (aniket486)

PIG-3932: Document ROUND_TO builtin UDF (mrflip via cheolsoo)

PIG-3926: ROUND_TO function: rounds double/float to fixed number of decimal places (mrflip via cheolsoo)

PIG-3901: Organize the Pig properties file and document all properties (mrflip via cheolsoo)

PIG-3867: Added hadoop home to build classpath for build pig with unit test on windows (Sergey Svinarchuk via gates)

PIG-3914: Change TaskContext to abstract class (cheolsoo)

PIG-3672: Pig should not check for hardcoded file system implementations (rohini)

PIG-3860: Refactor PigStatusReporter and PigLogger for non-MR execution engine (cheolsoo)

PIG-3865: Remodel the XMLLoader to work to be faster and more maintainable (aseldawy via daijy)

PIG-3737: Bundle dependent jars in distribution in %PIG_HOME%/lib folder (daijy)
